# aur-reddit-bot

./: .env.sample  Cargo.toml  Dockerfile  README.org  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: aur.rs  client.rs  db.rs  main.rs  parse.rs
