[package]
name = "aur-reddit-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
futures-util = "0.3.21"
linkify = "0.8.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.10"
roux = "1.3.12"
roux-stream = "0.1.0"
serde = "1.0.137"
serde_derive = "1.0.137"
sqlite = "0.26.0"
tokio = {version = "1.19.2", features = ["macros", "rt-multi-thread"]}
tokio-retry = "0.3.0"
url = "2.2.2"
